feature: add edit and delete function to account management

--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #3180cf;
+    background-color: #0075c9;
     color: #FFFFFF;
     text-align: center;
     padding: 1px 0;
