--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,10 +1,4 @@
-.footer {
+.footer-container {
     background-color: #0075c9;
     color: #FFFFFF;
-    text-align: center;
-    padding: 1px 0;
-}
-
-p {
-    padding-bottom: 15px;
 }
