--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,102 +1,29 @@
-
 .form-group {
   width: 33.3%;
   margin-bottom: 8px;
-  min-width: 380px;
+  min-width: 232px;
 }
 
-input, select, .btn-primary {
+input,
+select,
+.btn-primary {
   border-color: black !important;
 }
 
-.footer {
-  background-color: #add8e6;
-  padding: 10px 0;
-  text-align: center;
+input[type='text'],
+input[type='phone'],
+input[type='email'],
+input[type='date'],
+input[type='password'] {
+  padding: 3px 6px;
+  font-size: 14px;
+  margin-top: 2px;
 }
 
-.table-container {
-  overflow-x: auto;
-  max-height: 200px;
+.btn {
+  padding: 3px 6px;
+  font-size: 14px;
 }
-
-.container {
-  max-width: 900px;
-  margin-top: 20px;
-}
-
-.board, .new-board-btn {
-  border: 2px solid blue;
-  border-radius: 5px;
-  margin-bottom: 15px;
-  padding: 10px;
-}
-
-.board-header {
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #000000;
-}
-
-.table th, .table td {
-  vertical-align: middle;
-}
-
-.form-label {
-  margin-bottom: 3px;
-}
-
-.form-select {
-  margin-bottom: 8px;
-}
-
-
-
-body {
-	color: #566787;
-	background: #f5f5f5;
-	font-family: 'Varela Round', sans-serif;
-	font-size: 13px;
-}
-
-
-
-.table-title {        
-	padding-bottom: 8px !important;
-	background: #435d7d;
-	color: #fff;
-	padding: 16px 30px;
-	width: 100%;
-	margin: -7px -20px -7px;
-}
-.table-title h2 {
-	margin: 5px 0 0;
-	font-size: 24px;
-}
-.table-title .btn-group {
-	float: right;
-}
-.table-title .btn {
-	color: #fff;
-	float: right;
-	font-size: 13px;
-	border: none;
-	min-width: 50px;
-	border-radius: 2px;
-	border: none;
-	outline: none !important;
-	margin-left: 10px;
-}
-.table-title .btn i {
-	float: left;
-	font-size: 21px;
-	margin-right: 5px;
-}
-.table-title .btn span {
-	float: left;
-	margin-top: 2px;
-}
-
 
 .footer {
   background-color: #add8e6;
@@ -114,7 +41,8 @@ body {
   margin-top: 20px;
 }
 
-.board, .new-board-btn {
+.board,
+.new-board-btn {
   border: 2px solid blue;
   border-radius: 5px;
   margin-bottom: 15px;
@@ -127,7 +55,8 @@ body {
   color: #000000;
 }
 
-.table th, .table td {
+.table th,
+.table td {
   vertical-align: middle;
 }
 
@@ -139,51 +68,144 @@ body {
   margin-bottom: 8px;
 }
 
+.table-title {
+  padding-bottom: 8px !important;
+  background: #435d7d;
+  color: #fff;
+  padding: 16px 30px;
+  width: 100%;
+  margin: -7px -20px -7px;
+}
 
+.table-title h2 {
+  margin: 5px 0 0;
+  font-size: 24px;
+}
+
+.table-title .btn-group {
+  float: right;
+}
+
+.table-title .btn {
+  color: #fff;
+  float: right;
+  font-size: 13px;
+  border: none;
+  min-width: 50px;
+  border-radius: 2px;
+  border: none;
+  outline: none !important;
+  margin-left: 10px;
+}
+
+.table-title .btn i {
+  float: left;
+  font-size: 21px;
+  margin-right: 5px;
+}
+
+.table-title .btn span {
+  float: left;
+  margin-top: 2px;
+}
+
+
+.footer {
+  background-color: #add8e6;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.table-container {
+  overflow-x: auto;
+  max-height: 200px;
+}
+
+.container {
+  max-width: 900px;
+  margin-top: 20px;
+}
+
+.board,
+.new-board-btn {
+  border: 2px solid blue;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  padding: 10px;
+}
+
+.board-header {
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #000000;
+}
+
+.table th,
+.table td {
+  vertical-align: middle;
+}
+
+.form-label {
+  margin-bottom: 3px;
+}
+
+.form-select {
+  margin-bottom: 8px;
+}
 
 body {
-	color: #566787;
-	background: #f5f5f5;
-	font-family: 'Varela Round', sans-serif;
-	font-size: 13px;
+  /* color: #337ab7; */
+  color: #000000;
+  background: #f5f5f5;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14px;
+}
+
+label {
+  margin-top: 1px;
 }
 
 
 
-.table-title {        
-	padding-bottom: 8px !important;
-	background: #435d7d;
-	color: #fff;
-	padding: 16px 30px;
-	width: 100%;
-	margin: -7px -20px -7px;
+.table-title {
+  padding-bottom: 8px !important;
+  background: #435d7d;
+  color: #fff;
+  padding: 16px 30px;
+  width: 100%;
+  margin: -7px -20px -7px;
 }
+
 .table-title h2 {
-	margin: 5px 0 0;
-	font-size: 24px;
+  margin: 5px 0 0;
+  font-size: 24px;
 }
+
 .table-title .btn-group {
-	float: right;
+  float: right;
 }
+
 .table-title .btn {
-	color: #fff;
-	float: right;
-	font-size: 13px;
-	border: none;
-	min-width: 50px;
-	border-radius: 2px;
-	border: none;
-	outline: none !important;
-	margin-left: 10px;
+  color: #fff;
+  float: right;
+  font-size: 13px;
+  border: none;
+  min-width: 50px;
+  border-radius: 2px;
+  border: none;
+  outline: none !important;
+  margin-left: 10px;
 }
+
 .table-title .btn i {
-	float: left;
-	font-size: 21px;
-	margin-right: 5px;
+  float: left;
+  font-size: 21px;
+  margin-right: 5px;
 }
+
 .table-title .btn span {
-	float: left;
-	margin-top: 2px;
+  float: left;
+  margin-top: 2px;
 }
 
 #printButton {
@@ -192,43 +214,56 @@ body {
   right: 20px;
 }
 
-
-
-
-
 .app-container {
-	width: 100%;
-	margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
-
 .body-container {
-	width: 90%;
-	margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
 }
 
 @media (max-width: 768px) {
-	.body-container {
-		width: 97%;
-		margin: 0 auto;
-	}
+  .body-container {
+    width: 97%;
+    margin: 0 auto;
+  }
 
-	.school-name {
-		display: none;
-	}
+  .search-group {
+    width: 100% !important;
+  }
+
+  .school-name {
+    display: none;
+  }
+}
+
+@media (max-width: 530px) {
+  .form-group {
+    width: 40%;
+    min-width: 215px;
+  }
+}
+
+@media (max-width: 430px) {
+  .form-group {
+    width: 95%;
+    min-width: 215px;
+  }
 }
 
 .login-container {
-	width: 98.4%;
-	margin: 0 auto;
+  width: 98.4%;
+  margin: 0 auto;
 }
 
 .header-container {
-	position: fixed;
-    top: 0;
-    left: 0;
-	width: 100%;
-	z-index: 1000;
-	background-color: #ffffff;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
