--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -165,7 +165,36 @@ label {
   margin-top: 1px;
 }
 
+.table thead th {
+  position: sticky;
+  top: 0;
+  background-color: #efefef;
+  z-index: 1;
+}
 
+.loading-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  border-radius: 8px;
+  z-index: 9999;
+}
+
+/* .loading-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+} */
 
 .table-title {
   padding-bottom: 8px !important;
